--- a/index.html
+++ b/index.html
@@ -50,18 +50,14 @@
             <li class="tm-nav-item">
               <a href="#" data-linkid="3" data-align="left" class="tm-nav-link">Contact</a>
             </li>
-            <li class="tm-nav-item">
-              <a
-                rel="nofollow" href="https://fb.com/tooplate"
-                class="tm-nav-link external">External</a>
-            </li>
           </ul>
         </nav>
 
         <!-- Site header -->
         <header class="tm-site-header-box tm-bg-dark">
-          <h1 class="tm-site-title">The Card</h1>
-          <p class="mb-0 tm-site-subtitle">Free HTML Template for you</p>
+          <!-- <h1 class="tm-site-title">Midnight Motors</h1> -->
+          <a href="http://www.midnightmotors.com"><img src="img/MM_Logo_Transparent.png" alt="Midnight Motors"></a>
+          <p class="mb-0 tm-site-subtitle-alt">Every Second Counts</p>
         </header>
       </div>
       <!-- tm-top-container -->
@@ -78,10 +74,10 @@
                 </h2>
                 <div class="tm-textbox tm-bg-dark">
                   <p>
-                    The Card template is last updated on 21 May 2019. Read More button is linked to second page. You can try it now. External link button is added on main menu.
+                    <b>Midnight Motors</b> is delivering the beauty of classic car design with modern performance.
                   </p>
                   <p class="mb-0">
-                    Please tell your friends about Tooplate for free templates. This is 70% alpha background.
+                    <b>Midnight Motors</b> is making every second count.
                   </p>
                 </div>
                 <a href="#" id="tm_about_link" data-linkid="1" class="tm-link">Read More</a>
@@ -92,12 +88,10 @@
                 <div class="tm-textbox tm-textbox-2 tm-bg-dark">
                   <h2 class="tm-text-blue mb-4">About Me</h2>
                   <p class="mb-4">
-                    You are allowed to modify and use this HTML template for
-                    your personal or business websites.
+                    Before moving to the beautiful countryside, I had a life in the city doing industrial engineering and technology.
                   </p>
                   <p class="mb-4">
-                    You are NOT allowed to re-distribute this template file on
-                    your site for any reason. Thank you.
+                    Always wanting to build, uniting innovation with craftsmanship has been a dream come true.
                   </p>
                   <a
                     href="#"
@@ -113,135 +107,73 @@
               <section class="tm-section tm-section-2 mx-auto">
                 <div class="grid tm-gallery">
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/01.jpg" alt="Image 1" class="" />
+                    <img src="img/cb750.jpeg" alt="CB 750" class="" />
                     <figcaption>
-                      <h2>
-                        Thoughtful
-                        <span>Goliath</span>
-                      </h2>
-                      <p>When Goliath comes out, you should run.</p>
-                      <a href="img/01.jpg">View more</a>
+                      <p>1971 Honda CB 750 restored to a modern cafe racer.</p>
+                      <a href="img/cb750.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/02.jpg" alt="Pretty Girl" class="" />
+                    <img src="img/jeep.jpg" alt="Jeep XJ" class="" />
                     <figcaption>
-                      <h2>
-                        Pretty Girl
-                        <span>Picture</span>
-                      </h2>
-                      <p>Vivamus feugiat, neque sed.</p>
-                      <a href="img/02.jpg">View more</a>
+                      <p>1999 Jeep Cherokee Sport with lift kit, tire carrier, light bar and more.</p>
+                      <a href="img/jeep.jpg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/03.jpg" alt="Red Flowers" class="" />
+                    <img src="img/xls.jpg" alt="XLS 100" class="" />
                     <figcaption>
-                      <h2>
-                        A bunch of
-                        <span>Red Flower</span>
-                      </h2>
-                      <p>Integer pellentesque nisi iaculis sapien.</p>
-                      <a href="img/03.jpg">View more</a>
+                      <p>1983 Honda XLS 100 dual sport.</p>
+                      <a href="img/xls.jpg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/04.jpg" alt="Stairs" class="" />
+                    <img src="img/oilpan.jpeg" alt="Oil pan" class="" />
                     <figcaption>
-                      <h2>
-                        Thoughtful
-                        <span>Goliath</span>
-                      </h2>
-                      <p>When Goliath comes out, you should run.</p>
-                      <a href="img/04.jpg">View more</a>
+                      <p>Replacing the oil pan and rear main seal.</p>
+                      <a href="img/oilpan.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/05.jpg" alt="Image 5" class="" />
+                    <img src="img/shop.jpeg" alt="Shop" class="" />
                     <figcaption>
-                      <h2>
-                        Thoughtful
-                        <span>Goliath</span>
-                      </h2>
-                      <p>When Goliath comes out, you should run.</p>
-                      <a href="img/05.jpg">View more</a>
+                      <p>Another day in the shop.</p>
+                      <a href="img/shop.jpg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/06.jpg" alt="Image 6" class="" />
+                    <img src="img/press.jpeg" alt="Press" class="" />
                     <figcaption>
-                      <h2>
-                        Thoughtful
-                        <span>Goliath</span>
-                      </h2>
-                      <p>When Goliath comes out, you should run.</p>
-                      <a href="img/06.jpg">View more</a>
+                      <p>Deploying the shop press.</p>
+                      <a href="img/press.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/07.jpg" alt="Image 7" class="" />
+                    <img src="img/weld.jpg" alt="Weld" class="" />
                     <figcaption>
-                      <h2>
-                        Thoughtful
-                        <span>Goliath</span>
-                      </h2>
-                      <p>When Goliath comes out, you should run.</p>
-                      <a href="img/07.jpg">View more</a>
+                      <p>Welding the tire carrier.</p>
+                      <a href="img/weld.jpg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/08.jpg" alt="Image 8" class="" />
+                    <img src="img/swing.jpeg" alt="Swingarm" class="" />
                     <figcaption>
-                      <h2>
-                        Thoughtful
-                        <span>Goliath</span>
-                      </h2>
-                      <p>When Goliath comes out, you should run.</p>
-                      <a href="img/08.jpg">View more</a>
+                      <p>Swingarm assembly.</p>
+                      <a href="img/swing.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/09.jpg" alt="Image 9" class="" />
+                    <img src="img/gauge.jpg" alt="Gauge" class="" />
                     <figcaption>
-                      <h2>
-                        Thoughtful
-                        <span>Goliath</span>
-                      </h2>
-                      <p>When Goliath comes out, you should run.</p>
-                      <a href="img/09.jpg">View more</a>
+                      <p>Lighting up the gauge.</p>
+                      <a href="img/gauge.jpg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/10.jpg" alt="Image 10" class="" />
+                    <img src="img/electronics.jpg" alt="Electronics" class="" />
                     <figcaption>
-                      <h2>
-                        Thoughtful
-                        <span>Goliath</span>
-                      </h2>
-                      <p>When Goliath comes out, you should run.</p>
-                      <a href="img/10.jpg">View more</a>
-                    </figcaption>
-                  </figure>
-                  <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/11.jpg" alt="Image 11" class="" />
-                    <figcaption>
-                      <h2>
-                        Thoughtful
-                        <span>Goliath</span>
-                      </h2>
-                      <p>When Goliath comes out, you should run.</p>
-                      <a href="img/11.jpg">View more</a>
-                    </figcaption>
-                  </figure>
-                  <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/12.jpg" alt="Image 12" class="" />
-                    <figcaption>
-                      <h2>
-                        Thoughtful
-                        <span>Goliath</span>
-                      </h2>
-                      <p>When Goliath comes out, you should run.</p>
-                      <a href="img/12.jpg">View more</a>
+                      <p>Electronics testing for the CB 750.</p>
+                      <a href="img/electronics.jpg">View more</a>
                     </figcaption>
                   </figure>
                 </div>
@@ -249,6 +181,16 @@
 
               <!-- Section 3 Contact -->
               <section class="tm-section tm-section-3 tm-section-left">
+                <div class="tm-contact-form-static">
+                For inquiries please contact:
+                </br>
+                </br>
+                midnightmotors999@gmail.com
+                </br>
+                </br>
+                Thank you.
+                </div>
+                <!--
                 <form action="" class="tm-contact-form" method="post">
                   <div class="form-group mb-4">
                     <input
@@ -286,6 +228,7 @@
                     </button>
                   </div>
                 </form>
+              -->
               </section>
             </div>
           </div>
@@ -294,16 +237,15 @@
 
       <div class="tm-bottom-container">
         <!-- Barcode -->
+        <!--
         <div class="tm-barcode-box">
           <img src="img/bar-code.jpg" alt="Bar code" />
         </div>
+        -->
 
         <!-- Footer -->
         <footer>
-          || Copyright &copy; 2018 Company Name || 
-                  
-        	Design: <a rel="nofollow" href="https://fb.com/tooplate">Tooplate</a> || 
-        
+          || Copyright &copy; 2021 Midnight Motors ||
         </footer>
       </div>
     </div>
@@ -366,10 +308,10 @@
         // https://www.jqueryscript.net/slideshow/Simple-jQuery-Background-Image-Slideshow-with-Fade-Transitions-Background-Cycle.html
         bgCycle = $("body").backgroundCycle({
           imageUrls: [
-            "img/photo-02.jpg",
-            "img/photo-03.jpg",
-            "img/photo-04.jpg",
-            "img/photo-05.jpg"
+            "img/back.jpg",
+            "img/side.jpg",
+            "img/yard.jpeg",
+            "img/front.jpg"
           ],
           fadeSpeed: 2000,
           duration: -1,
