--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     <link rel="stylesheet" href="css/magnific-popup.css" />
     <link rel="stylesheet" href="css/tooplate-style.css" />
     <!-- Templatemo style -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YPW03VQLXJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-YPW03VQLXJ');
+    </script>
   </head>
 
   <body>
@@ -88,7 +98,7 @@
                 <div class="tm-textbox tm-textbox-2 tm-bg-dark">
                   <h2 class="tm-text-blue mb-4">About Me</h2>
                   <p class="mb-4">
-                    Before moving to the beautiful countryside, I had a life in the city doing industrial engineering and technology.
+                    Before moving to the beautiful countryside, I had a life in the city doing industrial engineering and technology. (<a href="https://industryforever.com">Industrial Design Blog</a>)
                   </p>
                   <p class="mb-4">
                     Always wanting to build, uniting innovation with craftsmanship has been a dream come true.
@@ -135,10 +145,10 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/shop.jpeg" alt="Shop" class="" />
+                    <img src="img/work.jpeg" alt="Shop" class="" />
                     <figcaption>
                       <p>Another day in the shop.</p>
-                      <a href="img/shop.jpg">View more</a>
+                      <a href="img/work.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
@@ -181,15 +191,7 @@
 
               <!-- Section 3 Contact -->
               <section class="tm-section tm-section-3 tm-section-left">
-                <div class="tm-contact-form-static">
-                For inquiries please contact:
-                </br>
-                </br>
-                midnightmotors999@gmail.com
-                </br>
-                </br>
-                Thank you.
-                </div>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeEcSCAdWxgB2C9siGPDlao6og6CgyZ8uYtR5sOiHL_2pTMTA/viewform?embedded=true" width="640" height="955" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 <!--
                 <form action="" class="tm-contact-form" method="post">
                   <div class="form-group mb-4">
