--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="tm-textbox tm-textbox-2 tm-bg-dark">
                   <h2 class="tm-text-blue mb-4">About Me</h2>
                   <p class="mb-4">
-                    Before moving to the beautiful countryside, I had a life in the city doing industrial engineering and technology. (<a href="https://industryforever.com">Industrial Design Blog</a>)
+                    Before moving to the beautiful countryside, I had a life in the city doing industrial engineering and technology. <a href="https://industryforever.com">Industrial Design Blog</a>
                   </p>
                   <p class="mb-4">
                     Always wanting to build, uniting innovation with craftsmanship has been a dream come true.
