--- a/index.html
+++ b/index.html
@@ -98,10 +98,11 @@
                 <div class="tm-textbox tm-textbox-2 tm-bg-dark">
                   <h2 class="tm-text-blue mb-4">About Me</h2>
                   <p class="mb-4">
-                    Before moving to the beautiful countryside, I had a life in the city doing industrial engineering and technology. <a href="https://industryforever.com">Industrial Design Blog</a>
+                    Before moving to the countryside, I had a life in the city doing industrial engineering and technology. <a href="https://industryforever.com">Industrial Design Blog</a>
                   </p>
                   <p class="mb-4">
-                    Always wanting to build, uniting innovation with craftsmanship has been a dream come true.
+                    Uniting innovation with craftsmanship has been a dream come true. <br>
+                    <a href="https://www.instagram.com/fasttracktony/">Instagram</a>
                   </p>
                   <a
                     href="#"
@@ -137,18 +138,19 @@
                       <a href="img/xls.jpg">View more</a>
                     </figcaption>
                   </figure>
+                  </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/oilpan.jpeg" alt="Oil pan" class="" />
+                    <img src="img/jeep_switch.jpeg" alt="Electronics" class="" />
                     <figcaption>
-                      <p>Replacing the oil pan and rear main seal.</p>
-                      <a href="img/oilpan.jpeg">View more</a>
+                      <p>Switch on.</p>
+                      <a href="img/jeep_switch.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/work.jpeg" alt="Shop" class="" />
+                    <img src="img/shop_all.jpeg" alt="Oil pan" class="" />
                     <figcaption>
-                      <p>Another day in the shop.</p>
-                      <a href="img/work.jpeg">View more</a>
+                      <p>View of the shop.</p>
+                      <a href="img/shop_all.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
@@ -159,10 +161,31 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/jeep_studio.jpeg" alt="Oil pan" class="" />
+                    <figcaption>
+                      <p>Behind the scenes.</p>
+                      <a href="img/jeep_studio.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/oilpan.jpeg" alt="Oil pan" class="" />
+                    <figcaption>
+                      <p>Replacing the oil pan and rear main seal.</p>
+                      <a href="img/oilpan.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
                     <img src="img/weld.jpg" alt="Weld" class="" />
                     <figcaption>
                       <p>Welding the tire carrier.</p>
                       <a href="img/weld.jpg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/jeep_nightlight.jpeg" alt="Weld" class="" />
+                    <figcaption>
+                      <p>Running the lightbar during a rain storm.</p>
+                      <a href="img/jeep_nightlight.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
@@ -180,10 +203,31 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/jeep_midnight.jpeg" alt="Gauge" class="" />
+                    <figcaption>
+                      <p>Jeep under the moonlight.</p>
+                      <a href="img/jeep_midnight.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
                     <img src="img/electronics.jpg" alt="Electronics" class="" />
                     <figcaption>
                       <p>Electronics testing for the CB 750.</p>
                       <a href="img/electronics.jpg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/tire_change.jpeg" alt="Electronics" class="" />
+                    <figcaption>
+                      <p>Running the tire changer.</p>
+                      <a href="img/tire_change.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/jeep_trees.jpeg" alt="Electronics" class="" />
+                    <figcaption>
+                      <p>A place amongst the pines.</p>
+                      <a href="img/jeep_trees.jpeg">View more</a>
                     </figcaption>
                   </figure>
                 </div>
