--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                   <figure class="effect-goliath tm-gallery-item">
                     <img src="img/jeep_studio.jpeg" alt="Oil pan" class="" />
                     <figcaption>
-                      <p>Behind the scenes.</p>
+                      <p>Behind the scenes..</p>
                       <a href="img/jeep_studio.jpeg">View more</a>
                     </figcaption>
                   </figure>
