streamlined about page

--- a/index.html
+++ b/index.html
@@ -98,10 +98,13 @@
                 <div class="tm-textbox tm-textbox-2 tm-bg-dark">
                   <h2 class="tm-text-blue mb-4">About Me</h2>
                   <p class="mb-4">
-                    Before moving to the countryside, I had a life in the city doing industrial engineering and technology. <a href="https://industryforever.com">Industrial Design Blog</a>
-                  </p>
-                  <p class="mb-4">
-                    Uniting innovation with craftsmanship has been a dream come true. <br>
+                    Before moving to the countryside, I had a life in the city doing industrial engineering and technology.
+                    <br>
+                    <br>
+                    <a href="https://www.youtube.com/channel/UCaHtV6xldJmixwz6LfL1uRQ">Midnight Motors YouTube Channel</a>
+                    <br>
+                    <a href="https://industryforever.com">Industrial Design Blog</a>
+                    <br>
                     <a href="https://www.instagram.com/fasttracktony/">Instagram</a>
                   </p>
                   <a
