tighted up home page

--- a/index.html
+++ b/index.html
@@ -79,16 +79,9 @@
             <div class="tm-content">
               <!-- Section 0 Introduction -->
               <section class="tm-section tm-section-0">
-                <h2 class="tm-section-title mb-3 font-weight-bold">
-                  Introduction
-                </h2>
                 <div class="tm-textbox tm-bg-dark">
-                  <p>
-                    <b>Midnight Motors</b> is delivering the beauty of classic car design with modern performance.
-                  </p>
-                  <p class="mb-0">
-                    <b>Midnight Motors</b> is making every second count.
-                  </p>
+                    <h3><b>Midnight Motors</b></h3>
+                    delivers classic car design with modern performance, combining innovation with craftsmanship.
                 </div>
                 <a href="#" id="tm_about_link" data-linkid="1" class="tm-link">Read More</a>
               </section>
