cb750 clutch and fj40 suspesion photos

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/press.jpeg" alt="Press" class="" />
+                    <img src="img/cb750_clutch.jpeg" alt="Press" class="" />
                     <figcaption>
-                      <p>Deploying the shop press.</p>
-                      <a href="img/press.jpeg">View more</a>
+                      <p>New clutch for the CB750.</p>
+                      <a href="img/cb750_clutch.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
@@ -168,6 +168,13 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/fj40_suspension.jpeg" alt="Swingarm" class="" />
+                    <figcaption>
+                      <p>Upgrading the FJ40's suspension.</p>
+                      <a href="img/fj40_suspension.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
                     <img src="img/gauge.jpg" alt="Gauge" class="" />
                     <figcaption>
                       <p>Lighting up the gauge.</p>
@@ -200,6 +207,13 @@
                     <figcaption>
                       <p>A place amongst the pines.</p>
                       <a href="img/jeep_trees.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/press.jpeg" alt="Press" class="" />
+                    <figcaption>
+                      <p>Deploying the shop press.</p>
+                      <a href="img/press.jpeg">View more</a>
                     </figcaption>
                   </figure>
                 </div>
