cruiser, shop, jeep images

--- a/index.html
+++ b/index.html
@@ -216,6 +216,69 @@
                       <a href="img/press.jpeg">View more</a>
                     </figcaption>
                   </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/cruiser_suspension.jpeg" alt="Press" class="" />
+                    <figcaption>
+                      <p>New Cruiser suspension.</p>
+                      <a href="img/cruiser_suspension.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/motorcycle_chain.jpeg" alt="Press" class="" />
+                    <figcaption>
+                      <p>Swapping out the motorcycle chain and sprocket set.</p>
+                      <a href="img/motorcycle_chain.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/cutting_side.jpeg" alt="Press" class="" />
+                    <figcaption>
+                      <p>Cutting the Cruiser bumper.</p>
+                      <a href="img/cutting_side.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/cruiser_plate.jpg" alt="Press" class="" />
+                    <figcaption>
+                      <p>Pressing the patch panel for the Cruiser.</p>
+                      <a href="img/cruiser_plate.jpg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/cutting_front.jpeg" alt="Press" class="" />
+                    <figcaption>
+                      <p>Cutting the Cruiser bumper.</p>
+                      <a href="img/cutting_front.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/press_drill.jpg" alt="Press" class="" />
+                    <figcaption>
+                      <p>Drilling the shop press.</p>
+                      <a href="img/press_drill.jpg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/grinding_back.jpeg" alt="Press" class="" />
+                    <figcaption>
+                      <p>Cutting the Cruiser bumper.</p>
+                      <a href="img/grinding_back.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/painting_system.jpg" alt="Press" class="" />
+                    <figcaption>
+                      <p>Restoration and painting system.</p>
+                      <a href="img/painting_system.jpg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/cherokee_exhaust.jpeg" alt="Press" class="" />
+                    <figcaption>
+                      <p>New Jeep exhaust system.</p>
+                      <a href="img/cherokee_exhaust.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
                 </div>
                 <a
                   href="#"
