--- a/index.html
+++ b/index.html
@@ -154,6 +154,13 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/sunset.jpg" alt="Sunset" class="" />
+                    <figcaption>
+                      <p>Setting sun.</p>
+                      <a href="img/sunset.jpg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
                     <img src="img/jeep_nightlight.jpeg" alt="Weld" class="" />
                     <figcaption>
                       <p>Running the lightbar during a rain storm.</p>
