--- a/index.html
+++ b/index.html
@@ -119,21 +119,21 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/shop_all.jpeg" alt="Oil pan" class="" />
+                    <img src="img/shop_all.jpeg" alt="Shop" class="" />
                     <figcaption>
                       <p>View of the shop.</p>
                       <a href="img/shop_all.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/cb750_clutch.jpeg" alt="Press" class="" />
+                    <img src="img/cb750_clutch.jpeg" alt="Clutch" class="" />
                     <figcaption>
                       <p>New clutch for the CB750.</p>
                       <a href="img/cb750_clutch.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/jeep_studio.jpeg" alt="Oil pan" class="" />
+                    <img src="img/jeep_studio.jpeg" alt="Studio" class="" />
                     <figcaption>
                       <p>Behind the scenes.</p>
                       <a href="img/jeep_studio.jpeg">View more</a>
@@ -161,7 +161,14 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/jeep_nightlight.jpeg" alt="Weld" class="" />
+                    <img src="img/fabrication.jpeg" alt="Fabrication" class="" />
+                    <figcaption>
+                      <p>Fabrication.</p>
+                      <a href="img/fabrication.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/jeep_nightlight.jpeg" alt="Nightlight" class="" />
                     <figcaption>
                       <p>Running the lightbar during a rain storm.</p>
                       <a href="img/jeep_nightlight.jpeg">View more</a>
@@ -175,7 +182,7 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/fj40_suspension.jpeg" alt="Swingarm" class="" />
+                    <img src="img/fj40_suspension.jpeg" alt="Suspension" class="" />
                     <figcaption>
                       <p>Upgrading the FJ40's suspension.</p>
                       <a href="img/fj40_suspension.jpeg">View more</a>
@@ -189,7 +196,7 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/jeep_midnight.jpeg" alt="Gauge" class="" />
+                    <img src="img/jeep_midnight.jpeg" alt="Midnight" class="" />
                     <figcaption>
                       <p>Jeep under the moonlight.</p>
                       <a href="img/jeep_midnight.jpeg">View more</a>
@@ -203,14 +210,14 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/tire_change.jpeg" alt="Electronics" class="" />
+                    <img src="img/tire_change.jpeg" alt="Tire" class="" />
                     <figcaption>
                       <p>Running the tire changer.</p>
                       <a href="img/tire_change.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/jeep_trees.jpeg" alt="Electronics" class="" />
+                    <img src="img/jeep_trees.jpeg" alt="Trees" class="" />
                     <figcaption>
                       <p>A place amongst the pines.</p>
                       <a href="img/jeep_trees.jpeg">View more</a>
@@ -224,63 +231,63 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/cruiser_suspension.jpeg" alt="Press" class="" />
+                    <img src="img/cruiser_suspension.jpeg" alt="Cruiser" class="" />
                     <figcaption>
                       <p>New Cruiser suspension.</p>
                       <a href="img/cruiser_suspension.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/motorcycle_chain.jpeg" alt="Press" class="" />
+                    <img src="img/motorcycle_chain.jpeg" alt="Chain" class="" />
                     <figcaption>
                       <p>Swapping out the motorcycle chain and sprocket set.</p>
                       <a href="img/motorcycle_chain.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/cutting_side.jpeg" alt="Press" class="" />
+                    <img src="img/cutting_side.jpeg" alt="Cutting" class="" />
                     <figcaption>
                       <p>Cutting the Cruiser bumper.</p>
                       <a href="img/cutting_side.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/cruiser_plate.jpg" alt="Press" class="" />
+                    <img src="img/cruiser_plate.jpg" alt="Plate" class="" />
                     <figcaption>
                       <p>Pressing the patch panel for the Cruiser.</p>
                       <a href="img/cruiser_plate.jpg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/cutting_front.jpeg" alt="Press" class="" />
+                    <img src="img/cutting_front.jpeg" alt="Cut" class="" />
                     <figcaption>
                       <p>Cutting the Cruiser bumper.</p>
                       <a href="img/cutting_front.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/press_drill.jpg" alt="Press" class="" />
+                    <img src="img/press_drill.jpg" alt="Drill" class="" />
                     <figcaption>
                       <p>Drilling the shop press.</p>
                       <a href="img/press_drill.jpg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/grinding_back.jpeg" alt="Press" class="" />
+                    <img src="img/grinding_back.jpeg" alt="Grinding" class="" />
                     <figcaption>
                       <p>Cutting the Cruiser bumper.</p>
                       <a href="img/grinding_back.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/painting_system.jpg" alt="Press" class="" />
+                    <img src="img/painting_system.jpg" alt="Painting" class="" />
                     <figcaption>
                       <p>Restoration and painting system.</p>
                       <a href="img/painting_system.jpg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/cherokee_exhaust.jpeg" alt="Press" class="" />
+                    <img src="img/cherokee_exhaust.jpeg" alt="Exhaust" class="" />
                     <figcaption>
                       <p>New Jeep exhaust system.</p>
                       <a href="img/cherokee_exhaust.jpeg">View more</a>
