new images, removal and compression of old

--- a/index.html
+++ b/index.html
@@ -133,31 +133,24 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/jeep_studio.jpeg" alt="Studio" class="" />
+                    <img src="img/excavators.jpeg" alt="Oil pan" class="" />
                     <figcaption>
-                      <p>Behind the scenes.</p>
-                      <a href="img/jeep_studio.jpeg">View more</a>
+                      <p>With the big machines.</p>
+                      <a href="img/excavators.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/oilpan.jpeg" alt="Oil pan" class="" />
+                    <img src="img/swing_arm_weld.jpeg" alt="Weld" class="" />
                     <figcaption>
-                      <p>Replacing the oil pan and rear main seal.</p>
-                      <a href="img/oilpan.jpeg">View more</a>
+                      <p>Welding the swing arm tire carrier.</p>
+                      <a href="img/swing_arm_weld.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/weld.jpg" alt="Weld" class="" />
+                    <img src="img/painted.jpeg" alt="Painted" class="" />
                     <figcaption>
-                      <p>Welding the tire carrier.</p>
-                      <a href="img/weld.jpg">View more</a>
-                    </figcaption>
-                  </figure>
-                  <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/sunset.jpg" alt="Sunset" class="" />
-                    <figcaption>
-                      <p>Setting sun.</p>
-                      <a href="img/sunset.jpg">View more</a>
+                      <p>Finished swing arm assembly.</p>
+                      <a href="img/painted.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
@@ -193,13 +186,6 @@
                     <figcaption>
                       <p>Lighting up the gauge.</p>
                       <a href="img/gauge.jpg">View more</a>
-                    </figcaption>
-                  </figure>
-                  <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/jeep_midnight.jpeg" alt="Midnight" class="" />
-                    <figcaption>
-                      <p>Jeep under the moonlight.</p>
-                      <a href="img/jeep_midnight.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
@@ -245,13 +231,6 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/cutting_side.jpeg" alt="Cutting" class="" />
-                    <figcaption>
-                      <p>Cutting the Cruiser bumper.</p>
-                      <a href="img/cutting_side.jpeg">View more</a>
-                    </figcaption>
-                  </figure>
-                  <figure class="effect-goliath tm-gallery-item">
                     <img src="img/cruiser_plate.jpg" alt="Plate" class="" />
                     <figcaption>
                       <p>Pressing the patch panel for the Cruiser.</p>
@@ -284,13 +263,6 @@
                     <figcaption>
                       <p>Restoration and painting system.</p>
                       <a href="img/painting_system.jpg">View more</a>
-                    </figcaption>
-                  </figure>
-                  <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/cherokee_exhaust.jpeg" alt="Exhaust" class="" />
-                    <figcaption>
-                      <p>New Jeep exhaust system.</p>
-                      <a href="img/cherokee_exhaust.jpeg">View more</a>
                     </figcaption>
                   </figure>
                 </div>
