--- a/index.html
+++ b/index.html
@@ -147,17 +147,17 @@
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
-                    <img src="img/painted.jpeg" alt="Painted" class="" />
-                    <figcaption>
-                      <p>Finished swing arm assembly.</p>
-                      <a href="img/painted.jpeg">View more</a>
-                    </figcaption>
-                  </figure>
-                  <figure class="effect-goliath tm-gallery-item">
                     <img src="img/fabrication.jpeg" alt="Fabrication" class="" />
                     <figcaption>
                       <p>Fabrication.</p>
                       <a href="img/fabrication.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/painted.jpeg" alt="Painted" class="" />
+                    <figcaption>
+                      <p>Finished swing arm assembly.</p>
+                      <a href="img/painted.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
@@ -172,6 +172,13 @@
                     <figcaption>
                       <p>Swingarm assembly.</p>
                       <a href="img/swing.jpeg">View more</a>
+                    </figcaption>
+                  </figure>
+                  <figure class="effect-goliath tm-gallery-item">
+                    <img src="img/light_circuits.jpeg" alt="Weld" class="" />
+                    <figcaption>
+                      <p>Installing light bar circuits.</p>
+                      <a href="img/light_circuits.jpeg">View more</a>
                     </figcaption>
                   </figure>
                   <figure class="effect-goliath tm-gallery-item">
